# PolyUMI-firmware

./: .gitignore  README.md  pi_camera_node.py  pi_camera_streamer.py  pyproject.toml  ruff.toml
nominal_polyumi/: README.md  polyumi.connect  polyumi_connect.py  polyumi_gopro.py  requirements.txt
pi/: audio_streamer.py  cam_streamer.py  led_manager.py  pi_streamer.py  pyproject.toml
pi/polyumi_pi/: audio_streamer.py  cam_streamer.py  main.py
pi/polyumi_pi/files/: metadata.py  session.py  video.py
pi/polyumi_pi/gopro/: gopro_bringup.py
pi/test/files/: test_audio.py  test_session.py  test_video.py
polytouch_msgs/: setup.py
postprocess/: main.py
ros2_ws/src/polytouch_msgs/: package.xml  pyproject.toml  setup.cfg  setup.py
ros2_ws/src/polytouch_msgs/polytouch_msgs/: audio_chunk.proto  camera_frame.proto
ros2_ws/src/polyumi_pi_msgs/: package.xml  setup.py
ros2_ws/src/polyumi_ros2/: package.xml  setup.cfg  setup.py
ros2_ws/src/polyumi_ros2/foxglove/layouts/: franka_demo.json  stream_demo.json
ros2_ws/src/polyumi_ros2/launch/: franka_demo.launch.xml  stream_demo.launch.xml
ros2_ws/src/polyumi_ros2/polyumi_ros2/: pi_receiver_node.py
