[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "grpcio-tools>=1.78.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "polytouch-msgs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "protobuf>=5.0.0",
]
