<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polyumi_ros2</name>
  <version>0.0.1</version>
  <description>Core ROS2 python nodes for the PolyUMI multimodal learning platform</description>
  <maintainer email="cwoodhayes@gmail.com">conorbot</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
